plugins {
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}
apply plugin: 'java'

group = pluginGroup
version = pluginVersion

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven { url 'https://repo.dmulloy2.net/nexus/repository/public/' }
}

dependencies {
    compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
    compileOnly 'org.spigotmc:spigot:1.15.2-R0.1-SNAPSHOT'
    compileOnly group: 'com.comphenix.protocol', name: 'ProtocolLib', version: '4.5.0'
    compileOnly group: 'io.netty', name: 'netty-all', version: '4.1.29.Final'
    compileOnly 'org.jetbrains:annotations:19.0.0'

    implementation 'org.mariuszgromada.math:MathParser.org-mXparser:4.4.2'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.reflections:reflections:0.9.12'

    implementation 'org.glassfish.jersey.core:jersey-server:2.31'
    implementation 'org.glassfish.jersey.containers:jersey-container-jdk-http:2.31'
    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.31'
    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
}

import org.apache.tools.ant.filters.ReplaceTokens

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}

shadowJar {
    classifier = null
    minimize {
        exclude(dependency('org.glassfish.jersey.*:.*:.*'))
    }
}
